# python-multithreading

./: Makefile  README.md  requirements.txt  setup.cfg  setup.py
pthread/: __about__.py  __init__.py  thread.py
pythread/: __init__.py  thread.py
tests/: test_doctest.py
