[metadata]
name = pthread
version = 0.1.2
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest thread manager over the world
long_description = file: README.md
platforms = linux
python_requires = >=3.3
classifiers =
        iDevelopment Status :: 5 - Production/Stable
        Environment :: Console
        Programming Language :: Python :: 3.2
url = https://github.com/francois-le-ko4la/python-multithreading
download_url = https://github.com/francois-le-ko4la/python-multithreading.git
license = GPL

[files]
packages = pthread
extra_files = LICENSE

[options]
zip_safe = True
test_suite = tests.*
install_requires = setuptools>=39.0.1
		   pycodestyle>=2.3.1
setup_requires = pytest-runner

[build-system]
requires = ["setuptools"]

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
