[metadata]
name = pythread
version = 1.0.0
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest thread manager over the world
long_description = file: README.md
platforms = linux
python_requires = >=3.3
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Programming Language :: Python :: 3.2
url = https://github.com/francois-le-ko4la/python-multithreading
download_url = https://github.com/francois-le-ko4la/python-multithreading.git
license = GPL
license_file = LICENSE

[options]
zip_safe = True
include_package_data = True
packages = find:
test_suite = tests.*
install_requires = setuptools>=39.0.1
		   pycodestyle>=2.3.1
setup_requires = pytest-runner

[bdist_wheel]
universal = 1

[build-system]
requires = ["setuptools"]

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
